# pelican

./: .gitmodules  CMakeLists.txt  README.md  config.hxx.in
CMakeModules/: FindFreeImagePlus.cmake  Findpystring.cmake
data/ui/: mainwindow.ui  menubar.xml
src/: CMakeLists.txt  application.cxx  application.hxx  commands.cxx  commands.hxx  exifutils.cxx  exifutils.hxx  main.cxx  mainwindow.cxx  mainwindow.hxx  media.cxx  media.hxx  mediainfopane.cxx  mediainfopane.hxx  mediashowarea.cxx  mediashowarea.hxx  mediaview.cxx  mediaview.hxx  menubar.cxx  menubar.hxx  thumbnailmanager.cxx  thumbnailmanager.hxx  uiloader.cxx  uiloader.hxx
